Main_Workflows 수정

--- a/.github/workflows/main_workflows.yml
+++ b/.github/workflows/main_workflows.yml
@@ -5,6 +5,15 @@ on:
   push:
     branches:
       - main
+  pull_request:
+    branches:
+      - main
+  workflow_dispatch:
+    inputs:
+      environment:
+        description: '배포 환경'
+        required: true
+        default: 'staging'
 
 # job
 jobs:
