--- a/.github/workflows/main_workflows.yml
+++ b/.github/workflows/main_workflows.yml
@@ -6,8 +6,7 @@ on:
     branches:
       - main
   pull_request:
-    branches:
-      - main
+    branches: [main, action]
   workflow_dispatch:
     inputs:
       environment:
